fix color of card title (white = invisible when compiling)

--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,3 @@ code {
     monospace;
 }
 
-.sui-layout-header {
-  background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%);
-}
-
-
-
-.title {
-  color: #ffffff;
-}
-
-
